[package]
name = "downstream-smoke"
version = "0.0.0"
edition = "2021"
publish = false

# Standalone crate (NOT a workspace member) that depends on turbo-graph via
# a path dep. This exercises the same code path a downstream cargo user
# hits when they `cargo add turbo-graph` and write their first program:
# the binary must link `cblas_sgemm` without any `extern crate blas_src;`
# ceremony or extra Cargo.toml entries.
#
# Run from this directory: `cargo run --release`.
[dependencies]
turbo-graph = { path = "../../turbo-graph" }
